Fix spacing on text rows For better display of arabic & translation side by side

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -88,6 +88,9 @@ h2.arabic, .arabic {
   .textrow {
     flex-wrap: unset;
     justify-content: space-between;
+    &>* {
+      max-width: 50%;
+    }
   }
   .titlerow>* {
     text-align: justify;
